[gd_scene load_steps=12 format=2]

[ext_resource path="res://models/clear/printer 2 lay.obj" type="ArrayMesh" id=1]
[ext_resource path="res://models/clear/printer 2 ray.obj" type="ArrayMesh" id=2]
[ext_resource path="res://models/clear/printer 2 full.obj" type="ArrayMesh" id=3]
[ext_resource path="res://models/clear/printer 2 extruder.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scripts/printer2cont.gd" type="Script" id=5]
[ext_resource path="res://controls/ItemList.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/printers.tres" type="Material" id=7]
[ext_resource path="res://Sound/Default.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "printer2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("printer 2 ray/printer 2 lay:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 2.89283e-07, 0, -0.887805 ), Vector3( -1.48003e-07, 0, 0.454219 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("printer 2 ray/printer 2 lay/printer 2 extruder:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -1.65291, 0, -5.36442e-07 ), Vector3( -0.257078, 0, -8.9407e-08 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "printer2clr"
tracks/0/type = "value"
tracks/0/path = NodePath("printer 2 ray/printer 2 lay:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -4.67433e-07, 0, 1.43454 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("printer 2 ray:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.705435, 0 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.60421, 2.6906, 2.59674 )

[node name="Spatial" type="Spatial"]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.0355303, 0 )

[node name="printer 2 full" type="MeshInstance" parent="StaticBody"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 7 )

[node name="printer 2 ray" type="MeshInstance" parent="StaticBody/printer 2 full"]
transform = Transform( 1, 0, -1.42109e-13, 0, 1, 0, 1.42109e-13, 0, 1, 0, -1.47997, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 7 )

[node name="printer 2 lay" type="MeshInstance" parent="StaticBody/printer 2 full/printer 2 ray"]
transform = Transform( 1, 0, 8.52651e-14, 0, 1, 0, -8.52651e-14, 0, 1, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 7 )

[node name="printer 2 extruder" type="MeshInstance" parent="StaticBody/printer 2 full/printer 2 ray/printer 2 lay"]
mesh = ExtResource( 4 )
material/0 = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody/printer 2 full"]
playback_speed = 0.25
anims/printer2 = SubResource( 1 )
anims/printer2clr = SubResource( 2 )
script = ExtResource( 5 )

[node name="Spatial" type="Spatial" parent="StaticBody/printer 2 full"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.13154, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.70694, 0 )
shape = SubResource( 3 )

[node name="Control" type="Control" parent="StaticBody"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" parent="StaticBody/Control" instance=ExtResource( 6 )]
anchor_left = 0.187
anchor_top = 0.121
anchor_right = 0.813
anchor_bottom = 0.879
margin_left = -0.139999
margin_top = 0.119995
margin_right = 0.139954
margin_bottom = -0.120117

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StaticBody"]
stream = ExtResource( 8 )
[connection signal="input_event" from="StaticBody" to="StaticBody/printer 2 full/AnimationPlayer" method="_on_StaticBody_input_event"]
[connection signal="gui_input" from="StaticBody/Control" to="StaticBody/printer 2 full/AnimationPlayer" method="_on_Control_gui_input"]
[connection signal="item_selected" from="StaticBody/Control/ItemList" to="StaticBody/printer 2 full/AnimationPlayer" method="_on_ItemList_item_selected"]
